# vos-installer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.c  page-00-home.c  page-01-drive-select.c  page-01b-boot-select.c  page-02-profile.c  page-03-complete.c  pages.h  sd-utils.c  sd-utils.h  vos-installer.desktop
cli/: CMakeLists.txt  install.h  main.c  oldmain0.c  oldmain1.c  oldmain2.c
